@@ -36,6 +36,7 @@ static const ldap_extra_t ldap_extra = {
 	ldap_back_proxy_authz_ctrl,
 	ldap_back_controls_free,
 	slap_idassert_authzfrom_parse_cf,
+	slap_idassert_passthru_parse_cf,
 	slap_idassert_parse_cf,
 	slap_retry_info_destroy,
 	slap_retry_info_parse,
